--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                     <a class="header-link" href="portfolio.html">Portafolio</a>
                     <a class="header-link" href="contactos">Contactos</a>
                 </nav>
-
-                <a class="header-link1" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="header-link1" href="tel:+380961111111">+380 961 11 11 11</a>
+                <div class="link-1">
+                    <a class="header-link-2" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="header-link-2" href="tel:+380961111111">+380 961 11 11 11</a>
+                </div>
             </div>
         </div>
     </header>
@@ -100,7 +101,7 @@
 
 
             <div class="container">
-                <h2 class="h2">nuestro equipo</h2>
+                <h2 class="h2-equipo">nuestro equipo</h2>
                 <div class="container-equipo2">
 
                     <div><img src="images/13.jpg" alt="hombre con gafas" width="270" height="260">
@@ -133,8 +134,8 @@
         <div class="container">
             <address class="container-address">
 
-                <p class="webstudio">webstudio</p>
-                <p class="adress">Ticomán 500, Ciudad de México, CDMX, México</p>
+                <p class="webstudio">WebStudio</p>
+                <p class="p-adress">Calz.Ticomán 500, Ciudad de México, CDMX, México</p>
                 <p class="p">info@example.com</p>
                 <p class="p">+52 55 5529 6000</p>
 
